--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,16 @@
         <activity
             android:name=".view.ActivityAuth"
             android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".view.ActivityMain"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.ActivityMain"
-            android:exported="false">
         </activity>
 
     </application>
