--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:theme="@style/Theme.TeachMeTech"
         tools:targetApi="31">
         <activity
-            android:name=".view.ActivityChat"
+            android:name=".view.ActivityCourse"
             android:exported="false" />
-
-
-        <!-- core activites -->
+        <activity
+            android:name=".view.ActivityChat"
+            android:exported="false" /> <!-- core activites -->
         <activity
             android:name=".view.ActivityAuth"
             android:exported="true">
@@ -31,9 +31,7 @@
         </activity>
         <activity
             android:name=".view.ActivityMain"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
