--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.TeachMeTech"
         tools:targetApi="31">
         <activity
+            android:name=".view.ActivitySettings"
+            android:exported="false" />
+        <activity
             android:name=".view.ActivityCourse"
             android:exported="false" />
         <activity
@@ -31,7 +34,7 @@
         </activity>
         <activity
             android:name=".view.ActivityMain"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
