added : new courses structure
now we have steps structure
courses
--- contents

build contents and import into courses from TMT web
or
build new courses with existing contents

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.TeachMeTech"
         tools:targetApi="31">
         <activity
+            android:name=".view.ActivityCourseContent"
+            android:exported="false" />
+        <activity
             android:name=".view.ActivitySettings"
             android:exported="false" />
         <activity
