--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.TeachMeTech"
         tools:targetApi="31">
         <activity
+            android:name=".view.ActivityUserBanned"
+            android:exported="false" />
+        <activity
+            android:name=".Activity_Userbanned"
+            android:exported="false" />
+        <activity
             android:name=".view.ActivityCourseContent"
             android:exported="false" />
         <activity
